--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr-FR">
     <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>MailHTML</title>
     </head>
     <body>
-
+        <div>MailHTML</div>
     </body>
 </html>
