--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <title>MailHTML</title>
     </head>
-    <body>
-        <div>MailHTML</div>
+    <body style="padding:0;background-color:#f0f0f0;">
+        <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;"><tr><td width="100%" align="center">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;"><tr><td width="600" align="left">
+
+            <p>lorem</p>
+
+        </td></tr></table>
+        </td></tr></table>
     </body>
 </html>
