--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
     </head>
     <body style="padding:0;background-color:#f0f0f0;">
         <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;"><tr><td width="100%" align="center">
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;"><tr><td width="600" align="left">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;"><tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
 
-            <p>lorem</p>
+            <p>Mail HTML</p>
 
-        </td></tr></table>
+            <!-- 3 columns -->
+            <table border="0" cellspacing="0" cellpadding="0" width="580">
+                <tr>
+                    <td valign="top" width="186"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
+                    <td width="11"></td>
+                    <td valign="top" width="186"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+                    <td width="11"></td>
+                    <td valign="top" width="186"><strong>MailHTML</strong> : Sed non risus. Suspendisse lectus tortor, dignissim sit amet.</td>
+                </tr>
+            </table>
+            <br />
+
+            <!-- 2 columns -->
+            <table border="0" cellspacing="0" cellpadding="0" width="580">
+                <tr>
+                    <td valign="top" width="285"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
+                    <td width="10"></td>
+                    <td valign="top" width="285"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+                </tr>
+            </table>
+            <br />
+
+
+        <td width="10"></td></td></tr></table>
         </td></tr></table>
     </body>
 </html>
