--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
     <body style="padding:0;background-color:#f0f0f0;">
         <!-- Main Container start -->
-        <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;"><tr><td height="20"></td><tr><td width="100%" align="center">
+        <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
+            <tr><td height="20"></td></tr>
+            <tr><td width="100%" align="center">
+
         <!-- Main Content start -->
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;"></tr><tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;">
+            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
 
             <h1>Mail HTML</h1>
 
@@ -34,9 +38,12 @@
             </table>
             <br />
 
-        <!-- Main Content end -->
-        </td><td width="10"></td></tr><tr></table>
+            <!-- Main Content end -->
+            </td><td width="10"></td></tr>
+        </table>
         <!-- Main Container end -->
-        </td></tr><tr><td height="20"></td></tr></table>
+        </td></tr>
+        <tr><td height="20"></td></tr>
+    </table>
     </body>
 </html>
