--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE HTML>
 <html lang="fr-FR">
-    <head>
-    <meta charset="UTF-8" />
-    <title>MailHTML</title>
-    </head>
-    <body style="padding:0;background-color:#f0f0f0;">
-        <!-- Main Container start -->
-        <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
-            <tr><td height="20"></td></tr>
-            <tr><td width="100%" align="center">
+<head>
+<style type="text/css">
+.ReadMsgBody {width: 100%;}
+.ExternalClass {width: 100%;}
+body {}
+span.yshortcuts { color:#000; background-color:none; border:none;}
+span.yshortcuts:hover,
+span.yshortcuts:active,
+span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+</style>
+<meta charset="UTF-8" />
+<title>MailHTML</title>
+</head>
+<body style="padding:0;background-color:#f0f0f0;">
+<!-- Main Container start -->
+<div style="padding:0;background-color:#f0f0f0;">
+<table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
+    <tr><td height="20">&nbsp;</td></tr>
+    <tr><td width="100%" align="center">
 
         <!-- Main Content start -->
         <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;">
-            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
+            <tr><td width="10">&nbsp;</td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
 
             <h1>Mail HTML</h1>
 
@@ -26,35 +36,88 @@
             </table>
             <br />
 
+            <h2>Text - image</h2>
+            <table border="0" cellspacing="0" cellpadding="0" width="580">
+                <tr>
+                    <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
+                    <td width="20">&nbsp;</td>
+                    <td width="200" valign="top" ><img src="http://placekitten.com/200/160" alt="" /></td>
+                </tr>
+                <!-- If multiple images, use : -->
+                <!--
+                <tr>
+                    <td colspan="3" height="10">&nbsp;</td>
+                </tr>
+                <tr>
+                    <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
+                    <td width="20">&nbsp;</td>
+                    <td width="200" valign="top" ><img src="http://placekitten.com/200/161" alt="" /></td>
+                </tr>
+                -->
+            </table>
+            <br />
 
-            <!-- 3 columns -->
+            <h2>Image - text</h2>
+            <table border="0" cellspacing="0" cellpadding="0" width="580">
+                <tr>
+                    <td width="200" valign="top" ><img src="http://placekitten.com/200/159" alt="" /></td>
+                    <td width="20">&nbsp;</td>
+                    <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
+                </tr>
+                <!-- If multiple images, use : -->
+                <!--
+                <tr>
+                    <td colspan="3" height="10">&nbsp;</td>
+                </tr>
+                <tr>
+                    <td width="200" valign="top" ><img src="http://placekitten.com/200/160" alt="" /></td>
+                    <td width="20">&nbsp;</td>
+                    <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
+                </tr>
+                -->
+            </table>
+            <br />
+
+            <h2>Three Columns</h2>
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td valign="top" width="186"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
-                    <td width="11"></td>
+                    <td width="11">&nbsp;</td>
                     <td valign="top" width="186"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-                    <td width="11"></td>
+                    <td width="11">&nbsp;</td>
                     <td valign="top" width="186"><strong>MailHTML</strong> : Sed non risus. Suspendisse lectus tortor, dignissim sit amet.</td>
                 </tr>
             </table>
             <br />
 
-            <!-- 2 columns -->
+            <h2>Two Columns</h2>
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td valign="top" width="285"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
-                    <td width="10"></td>
+                    <td width="10">&nbsp;</td>
                     <td valign="top" width="285"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
                 </tr>
             </table>
             <br />
 
             <!-- Main Content end -->
-            </td><td width="10"></td></tr>
+            </td><td width="10">&nbsp;</td></tr>
         </table>
-        <!-- Main Container end -->
-        </td></tr>
-        <tr><td height="20"></td></tr>
-    </table>
-    </body>
+
+
+    <!-- Main Container end -->
+    </td></tr>
+    <tr><td height="20">&nbsp;</td></tr>
+</table>
+</div>
+<style type="text/css">
+.ReadMsgBody {width: 100%;}
+.ExternalClass {width: 100%;}
+body {}
+span.yshortcuts { color:#000; background-color:none; border:none;}
+span.yshortcuts:hover,
+span.yshortcuts:active,
+span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+</style>
+</body>
 </html>
