Title with link & fixes cells & spaces

--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 <!-- Main Container start -->
 <div style="padding:0;background-color:#f0f0f0;">
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
-    <tr><td height="20">&nbsp;</td></tr>
+    <tr><td height="20"></td></tr>
     <tr><td width="100%" align="center">
 
         <!-- Main Content start -->
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fff;">
-            <tr><td width="10">&nbsp;</td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fefefe;">
+            <tr><td colspan="3" height="10"></td></tr>
+            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
 
-            <h1>Mail HTML</h1>
+
+
+            <!-- Title with link -->
+            <table border="0" cellspacing="0" cellpadding="0" width="580">
+                <tr>
+                    <td width="400" valign="middle"><h1 style="margin:0;">Mail HTML</h1></td>
+                    <td width="20"></td>
+                    <td width="160" align="right" valign="middle"><a href="https://github.com/darklg/MailHTML" style="text-decoration:none"><span style="color:#369;">Fork me on Github</span></a></td>
+                </tr>
+            </table>
+            <br />
 
             <!-- Push image with text -->
             <table border="0" cellspacing="0" cellpadding="0" width="580">
@@ -40,17 +51,17 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
-                    <td width="20">&nbsp;</td>
+                    <td width="20"></td>
                     <td width="200" valign="top" ><img src="http://placekitten.com/200/160" alt="" /></td>
                 </tr>
                 <!-- If multiple images, use : -->
                 <!--
                 <tr>
-                    <td colspan="3" height="10">&nbsp;</td>
+                    <td colspan="3" height="10"></td>
                 </tr>
                 <tr>
                     <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
-                    <td width="20">&nbsp;</td>
+                    <td width="20"></td>
                     <td width="200" valign="top" ><img src="http://placekitten.com/200/161" alt="" /></td>
                 </tr>
                 -->
@@ -61,17 +72,17 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td width="200" valign="top" ><img src="http://placekitten.com/200/159" alt="" /></td>
-                    <td width="20">&nbsp;</td>
+                    <td width="20"></td>
                     <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
                 </tr>
                 <!-- If multiple images, use : -->
                 <!--
                 <tr>
-                    <td colspan="3" height="10">&nbsp;</td>
+                    <td colspan="3" height="10"></td>
                 </tr>
                 <tr>
                     <td width="200" valign="top" ><img src="http://placekitten.com/200/160" alt="" /></td>
-                    <td width="20">&nbsp;</td>
+                    <td width="20"></td>
                     <td width="360" valign="top" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
                 </tr>
                 -->
@@ -82,9 +93,9 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td valign="top" width="186"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
-                    <td width="11">&nbsp;</td>
+                    <td width="11"></td>
                     <td valign="top" width="186"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
-                    <td width="11">&nbsp;</td>
+                    <td width="11"></td>
                     <td valign="top" width="186"><strong>MailHTML</strong> : Sed non risus. Suspendisse lectus tortor, dignissim sit amet.</td>
                 </tr>
             </table>
@@ -94,20 +105,20 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
             <table border="0" cellspacing="0" cellpadding="0" width="580">
                 <tr>
                     <td valign="top" width="285"><strong>MailHTML</strong> : adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam.</td>
-                    <td width="10">&nbsp;</td>
+                    <td width="10"></td>
                     <td valign="top" width="285"><strong>MailHTML</strong> : Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
                 </tr>
             </table>
             <br />
 
             <!-- Main Content end -->
-            </td><td width="10">&nbsp;</td></tr>
+            </td><td width="10"></td></tr>
         </table>
 
 
     <!-- Main Container end -->
     </td></tr>
-    <tr><td height="20">&nbsp;</td></tr>
+    <tr><td height="20"></td></tr>
 </table>
 </div>
 <style type="text/css">
