1019 chars for mobile bug
thanks @manoz

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 </style>
 <meta charset="UTF-8" />
 <title>MailHTML</title>
+<!-- 1019 Chars for mobile mail bug ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 </head>
 <body style="padding:0;background-color:#f0f0f0;">
 <!-- Main Container start -->
