--- a/index.html
+++ b/index.html
@@ -2,31 +2,29 @@
 <html lang="fr-FR">
 <head>
 <style type="text/css">
-.ReadMsgBody {width: 100%;}
-.ExternalClass {width: 100%;}
+.ReadMsgBody{width:100%;}
+.ExternalClass{width:100%;}
 body {}
-span.yshortcuts { color:#000; background-color:none; border:none;}
-span.yshortcuts:hover,
-span.yshortcuts:active,
-span.yshortcuts:focus {color:#000; background-color:none; border:none;}
+span.yshortcuts {color:#000;background-color:none;border:none;}
+span.yshortcuts:hover,span.yshortcuts:active,
+span.yshortcuts:focus{color:#000;background-color:none;border:none;}
 </style>
 <meta charset="UTF-8" />
 <title>MailHTML</title>
 <!-- 1019 Chars for mobile mail bug ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 </head>
-<body style="padding:0;background-color:#f0f0f0;">
+<body style="padding:0;margin:0;background-color:#f0f0f0;">
 <!-- Main Container start -->
 <div style="padding:0;background-color:#f0f0f0;">
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
     <tr><td height="20"></td></tr>
-    <tr><td width="100%" align="center">
-
+    <tr><td align="center"><a href="https://github.com/darklg/MailHTML" style="font:11px sans-serif;color:#999;">See this email in a web browser</a></td></tr>
+    <tr><td height="20"></td></tr>
+    <tr><td align="center">
         <!-- Main Content start -->
         <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fefefe;">
             <tr><td colspan="3" height="10"></td></tr>
             <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
-
-
 
             <!-- Title with link -->
             <table border="0" cellspacing="0" cellpadding="0" width="580">
@@ -119,6 +117,8 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 
     <!-- Main Container end -->
     </td></tr>
+    <tr><td height="20"></td></tr>
+    <tr><td align="center" style="font:11px sans-serif;color:#999;">Do you want to <a href="https://github.com/darklg/MailHTML" style="color:#999;">Unsubscribe</a> ?</td></tr>
     <tr><td height="20"></td></tr>
 </table>
 </div>
