--- a/strates.html
+++ b/strates.html
@@ -17,18 +17,12 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 </head>
 <body style="padding:0;margin:0;background-color:#f0f0f0;">
 
-<!-- Main Container start -->
 <div style="padding:0;background-color:#f0f0f0;">
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
-    <tr><td height="20"></td></tr>
-    <tr><td align="center"><a href="https://github.com/darklg/MailHTML" style="font:11px sans-serif;color:#999;">See this email in a web browser</a></td></tr>
-    <tr><td height="20"></td></tr>
     <tr><td align="center">
-        <!-- Main Content start -->
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#fefefe;">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#f0f0f0;">
             <tr><td colspan="3" height="10"></td></tr>
             <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
-
 <!-- Title with link -->
 <table border="0" cellspacing="0" cellpadding="0" width="580">
     <tr>
@@ -49,6 +43,18 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 </table>
 <br />
 
+            </td><td width="10"></td></tr>
+        </table>
+    </td></tr>
+</table>
+</div>
+
+<div style="padding:0;background-color:#ffffff;">
+<table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#ffffff;">
+    <tr><td align="center">
+        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#f9f9f9;">
+            <tr><td colspan="3" height="10"></td></tr>
+            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
 <h2>Text - image</h2>
 <table border="0" cellspacing="0" cellpadding="0" width="580">
     <tr>
@@ -114,17 +120,9 @@ span.yshortcuts:focus {color:#000; background-color:none; border:none;}
 </table>
 <br />
 
-
-            <!-- Main Content end -->
             </td><td width="10"></td></tr>
         </table>
-
-
-    <!-- Main Container end -->
     </td></tr>
-    <tr><td height="20"></td></tr>
-    <tr><td align="center" style="font:11px sans-serif;color:#999;">Do you want to <a href="https://github.com/darklg/MailHTML" style="color:#999;">Unsubscribe</a> ?</td></tr>
-    <tr><td height="20"></td></tr>
 </table>
 </div>
 
