Add global var for project URL

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ layout: default
 <div style="padding:0;background-color:#f0f0f0;">
 <table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
     <tr><td height="20"></td></tr>
-    <tr><td align="center"><a href="https://github.com/darklg/MailHTML" style="font:11px sans-serif;color:#999;">See this email in a web browser</a></td></tr>
+    <tr><td align="center"><a href="{{site.project_url}}" style="font:11px sans-serif;color:#999;">See this email in a web browser</a></td></tr>
     <tr><td height="20"></td></tr>
     <tr><td align="center">
         <!-- Main Content start -->
@@ -29,7 +29,7 @@ layout: default
     <!-- Main Container end -->
     </td></tr>
     <tr><td height="20"></td></tr>
-    <tr><td align="center" style="font:11px sans-serif;color:#999;">Do you want to <a href="https://github.com/darklg/MailHTML" style="color:#999;">Unsubscribe</a> ?</td></tr>
+    <tr><td align="center" style="font:11px sans-serif;color:#999;">Do you want to <a href="{{site.project_url}}" style="color:#999;">Unsubscribe</a> ?</td></tr>
     <tr><td height="20"></td></tr>
 </table>
 </div>
