--- a/src/responsive.html
+++ b/src/responsive.html
@@ -15,6 +15,17 @@ layout: responsive
             <tr><td width="10"></td><td width="580" class="m-full" align="left" style="font:13px/1.3 sans-serif;">
 
 
+            <h2>Image - text</h2>
+            <table border="0" cellspacing="0" cellpadding="0" width="580" class="m-full">
+                <tr>
+                    <td width="200" valign="top" class="m-full"><img class="m-full-img" src="http://placekitten.com/200/159" alt="" /></td>
+                    <td width="20" class="m-hide"></td>
+                    <td width="360" valign="top" class="m-full">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede.</td>
+                </tr>
+            </table>
+            <br />
+
+
             <h2>Three Columns</h2>
             <table border="0" cellspacing="0" cellpadding="0" width="580" class="m-full">
                 <tr>
