--- a/src/strates.html
+++ b/src/strates.html
@@ -2,32 +2,25 @@
 layout: default
 ---
 
-<div style="padding:0;background-color:#f0f0f0;">
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#f0f0f0;">
-    <tr><td align="center">
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#f0f0f0;">
-            <tr><td colspan="3" height="10"></td></tr>
-            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
-{% include blocks/title-link.html %}
-{% include blocks/hero.html %}
-            </td><td width="10"></td></tr>
-        </table>
-    </td></tr>
-</table>
+{% include components/strate-top.html bgcolor="#f0f0f0" margin=10 width=600 %}
+<div style="padding:10px 0;">
+    {% include blocks/title-link.html %}
+    {% include blocks/hero.html %}
 </div>
+{% include components/strate-bottom.html %}
 
-<div style="padding:0;background-color:#ffffff;">
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#ffffff;">
-    <tr><td align="center">
-        <table border="0" cellspacing="0" cellpadding="0" width="600" style="background-color:#f9f9f9;">
-            <tr><td colspan="3" height="10"></td></tr>
-            <tr><td width="10"></td><td width="580" align="left" style="font:13px/1.3 sans-serif;">
-{% include blocks/text-image.html %}
-{% include blocks/image-text.html %}
-{% include blocks/two-columns.html %}
-{% include blocks/three-columns.html %}
-            </td><td width="10"></td></tr>
-        </table>
-    </td></tr>
-</table>
+
+{% include components/strate-top.html bgcolor="#ffffff" margin=10 width=600 %}
+<div style="padding:10px 0;">
+    {% include blocks/text-image.html %}
+    {% include blocks/image-text.html %}
+    {% include blocks/two-columns.html %}
+    {% include blocks/three-columns.html %}
 </div>
+{% include components/strate-bottom.html %}
+
+{% include components/strate-top.html bgcolor="#f0f0f0" margin=10 width=220 %}
+<div style="padding:10px 0;">
+    <img src="http://placekitten.com/200/160" alt="" />
+</div>
+{% include components/strate-bottom.html %}
